--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -2137,7 +2137,7 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
         \begin{gather*}
             \varphi: \pi_1(\bb{R}P^n, [a_0]) \to p^{-1}([a_0]) = \{a_0,-a_0\}
         \end{gather*}
-        es biyectiva (ya que $\bb{S}^1$ es simplemente conexo).
+        es biyectiva (ya que $\bb{S}^1$ es simplemente conexo). Entonces $\pi_1(\bb{R}P^n, [a_0])$ solo tiene dos elementos, luego $\pi_1(\bb{R}P^n, [a_0]) \cong \bb{Z}^2$.
     \end{proof}
 \end{coro}
 
