--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -2065,6 +2065,31 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
     \end{gather*}
     donde la imagen de cada $\alpha_i$ cae completamente en $U$ o bien en $V$.
     \begin{proof}
+        Podemos entender de forma gráfica la demostración de la siguiente forma
+
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}[scale=0.8]
+                \shorthandoff{>}
+
+                % Espacios
+                \path[fill=blue, opacity= 0.3] (1,0) rectangle (-5,5);
+                \node[blue] at (-2.5, -0.5) {$U$};
+                \path[fill=red, opacity= 0.3] (-1,0) rectangle (5,5);
+                \node[red] at (2.5, -0.5) {$V$};
+                \node[red!50!blue] at (0,-0.5) {$U \cap V$};
+
+                % Punto x_0
+                \node[draw, circle, fill=black, inner sep=0.8pt, label=right:{$x_0$}] at (0,2) {};
+
+                % Arcos
+                \draw[black] plot[smooth, tension=1] coordinates {
+                    (0,2) (-0.3,2.1) (-2,1.8) (-3,2.5)
+                };
+
+            \end{tikzpicture}
+        \end{figure}
+
         Comenzamos con el lazo $\alpha:[0,1]\to X$. Consideramos $\alpha^{-1}(U)$ y $\alpha^{-1}(V)$ que son abiertos en $[0,1]$. Por el lema del número de Lebesgue tenemos que existen
         \begin{gather*}
             0=t_0 < t_1 < \dots < t_m = 1 \text{ partición del }[0,1]
