--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -2439,22 +2439,68 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
                 \shorthandoff{>}
 
                 \begin{scope}[shift={(-2,0)}]
+                    % Color radio medio
                     \fill[red, opacity=0.5] (0,0) ellipse (2 and 0.5);
 
-                    \draw[thick] (0,0) circle [radius=2];
+                    % Radio medio
                     \draw[thick, dashed] (2,0) arc (0:180:2 and 0.5);
                     \draw[thick] (2,0) arc (0:-180:2 and 0.5);
 
                     \node at (0,2.5) {$U$};
 
-                    \draw[thick, dashed] (-1.68,0) ellipse (0.25 and 1);
-                    \draw[thick] (-1.72,1) arc (150:-150:2 and 2);
+                    % Agujero superior
+                    \draw[thick, dashed] (0,1.68) ellipse (1 and 0.25);
+                    \draw[thick] (1, 1.72) arc (60:-240:2 and 2);
+
+                    % Puntos y arcos
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (-1,1.6) {};
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (-0.5,1.45) {};
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (0,1.43) {};
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (0.5,1.45) {};
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (1,1.6) {};
+
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (-1.8,-0.23) {};
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (-0.9,-0.43) {};
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (0,-0.5) {};
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (0.9,-0.43) {};
+                    \node[draw, circle, fill=blue, blue, inner sep=0.8pt] at (1.8,-0.23) {};
+                    
+                    \draw[->, bend right=25, blue, thick] (-1,1.6) to (-1.8,-0.23);
+                    \draw[->, bend right=15, blue, thick] (-0.5,1.45) to (-0.9,-0.43);
+                    \draw[->, blue, thick] (0,1.43) to (0,-0.5);
+                    \draw[->, bend left=15, blue, thick] (0.5,1.45) to (0.9,-0.43);
+                    \draw[->, bend left=25, blue, thick] (1,1.6) to (1.8,-0.23);
+                \end{scope}
+
+                \draw[->, dashed, thick] (0.5,0) -- (1.5,0);
+
+                \begin{scope}[shift={(4,0)}]
+                    \fill[red, opacity=0.5] (0,0) ellipse (2 and 0.5);
+
+                    \draw[thick, dashed] (2,0) arc (0:180:2 and 0.5);
+                    \draw[thick] (2,0) arc (0:-180:2 and 0.5);
+
+                    \draw[thick] (0,0) ellipse (2 and 0.5);
+
+                    \node at (0,2.5) {$U_1$};
+
+                    \draw[thick] (2,0) arc (0:-180:2 and 2);
+                \end{scope}
+
+                \node at (7,0) {$\cong$};
+
+                \begin{scope}[shift={(10,0)}]
+                    \draw[thick] (0,0) circle [radius=2];
+                    \draw[thick, dashed] (2,0) arc (0:180:2 and 0.5);
+                    \draw[thick] (2,0) arc (0:-180:2 and 0.5);
+
+                    \node at (0,2.5) {$\bb{S}^2$};
                 \end{scope}
 
             \end{tikzpicture}
         \end{figure}
         
-        De forma análoga si consideramos $U=X\setminus \{(0,0,-1)\}$ se tiene que $\pi_1(V)$ es trivial. Claramente se tiene que $U\cap V$ es arcoconexo\footnote{en un examen habrá que demostrarloo de forma más rigurosa} y por el teorema anterior se tiene que $X$ es simplemente conexo, luego su grupo fundamental es el trivial.
+        De forma análoga si consideramos $V=X\setminus \{(0,0,-1)\}$ se tiene que $\pi_1(V)$ es trivial. Claramente se tiene que $U\cap V$ es arcoconexo\footnote{en un examen habrá que demostrarloo de forma más rigurosa} y por el teorema anterior se tiene que $X$ es simplemente conexo, luego su grupo fundamental es el trivial.
     \end{enumerate}
 \end{ejemplo}
 
