--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/losDelDGIIM/Temario_TopoII.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/losDelDGIIM/Temario_TopoII.tex
@@ -5,6 +5,31 @@
 \usepackage[all]{xy}
 \usepackage{ stmaryrd }
 
+\usepackage{scalerel} % para escalar la tilde según el contenido
+
+\makeatletter
+\renewcommand{\tilde}[1]{%
+  \mathchoice%
+    {\@smarttilde\displaystyle{#1}}%
+    {\@smarttilde\textstyle{#1}}%
+    {\@smarttilde\scriptstyle{#1}}%
+    {\@smarttilde\scriptscriptstyle{#1}}%
+}
+
+\newcommand{\@smarttilde}[2]{%
+  \sbox0{$#1#2$}% medir ancho del argumento
+  \dimen0=\wd0%
+  % decidir tamaño según el ancho medido
+  \ifdim\dimen0<1.6ex
+    \mathaccent"0365{#2}% tilde pequeña estándar
+  \else\ifdim\dimen0<3.5ex
+    \widetilde{#2}% tilde normal
+  \else
+    % tilde suavemente más ancha pero no desbordante
+    \ThisStyle{\raisebox{0.15ex}{\scalerel*[\LMpt]{\widetilde{\SavedStyle#2}}{\SavedStyle#2}}}%
+  \fi\fi
+}
+\makeatother
 
 \newtheorem*{propiedades}{Propiedades}
 
